added link to github repo

--- a/html/index.html
+++ b/html/index.html
@@ -68,6 +68,7 @@
 	<small>
 		<ul>
 			<li>backend written in <a href="http://golang.org" target="_blank">go</a></li>
+			<li>code is <a href="http://github.com/sauerbraten/extinfo-web" target="_blank">here</a></li>
 			<li>uses the <a href="https://github.com/sauerbraten/extinfo" target="_blank">extinfo package</a></li>
 			<li>websockets → no page refreshs, no ajax requests</li>
 			<li>hubs group websocket connections by server; check out the <a href="/status" target="_blank">status page</a></li>
