--- a/html/index.html
+++ b/html/index.html
@@ -139,7 +139,7 @@
 
 			sock.onopen = function(e) {
 				console.log(" - socket opened - ");
-				sock.send(newaddr + "\t" + newport);
+				sock.send(newaddr + ":" + newport);
 				console.log("sent:    ", newaddr + "\t" + newport);
 			};
 
