switched to gorilla/websockets; some tweaks with the web-app

--- a/html/embed_demo.html
+++ b/html/embed_demo.html
@@ -60,7 +60,7 @@
 }</pre>
 	</p>
 
-	<script src="http://{{.}}/embed.js?id=demo&amp;addr=sauerleague.org&amp;port=6666">
+	<script src="//embed.js?id=demo&amp;addr=sauerleague.org&amp;port=6666">
 	</script>
 </body>
 </html>
