--- a/html/index.html
+++ b/html/index.html
@@ -10,13 +10,13 @@
 
 <body onload="init('{{.}}');" spellcheck="false">
 	<h1 id="heading">
-		extinfo-web
+		... // extinfo-web
 	</h1>
 	<table id="table">
 		<thead>
 			<tr>
-				<td>Address</td>
-				<td id="addr" contenteditable spellcheck="false" onblur="updatesocket();">
+				<td>Host</td>
+				<td id="host" contenteditable spellcheck="false" onblur="updatesocket();">
 					sauerleague.org
 				</td>
 			</tr>
@@ -61,7 +61,7 @@
 
 	<p>how</p>
 	<small>
-		try editing the server address and port fields to <i>ogros.org</i> and <i>20000</i>, and tab out of both fields
+		try editing the server address (host and port fields) to <i>ogros.org</i> and <i>20000</i>, and tab out of both fields
 	</small>
 
 	<p>embed</p>
