fixed embedding demo and error handling in embed.js

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
 			</tr>
 			<tr>
 				<td>Clients</td>
-				<td><span id="numberofclients"></span><span id="maxnumberofclients"></span></td>
+				<td><span id="numberofclients"></span>/<span id="maxnumberofclients"></span></td>
 			</tr>
 			<tr>
 				<td>Master Mode</td>
