--- a/html/embed_demo.html
+++ b/html/embed_demo.html
@@ -31,9 +31,9 @@
 	<p>
 		At the end of your page's <code>&lt;body&gt; ... &lt;/body&gt;</code>, put this snippet:
 		<pre>
-&lt;script src="http://{{.}}/embed.js?id=demo&amp;amp;addr=sauerleague.org&amp;amp;port=6666"&gt;
+&lt;script src="http://{{.}}/embed.js?id=demo&amp;amp;addr=ogros.org&amp;amp;port=20000"&gt;
 &lt;/script&gt;</pre>
-		<code>demo</code> is the part of your container's ID you chose yourself (your own identifier), <code>sauerleague.org</code> is the IP or host name of the server you want to monitor, and <code>6666</code> its port.
+		<code>demo</code> is the part of your container's ID you chose yourself (your own identifier), <code>ogros.org</code> is the IP or host name of the server you want to monitor, and <code>20000</code> its port.
 	</p>
 
 	<div id="extinfo-demo">
@@ -42,7 +42,7 @@
 
 	<p>
 		You'll have to style the resulting table yourself (however, feel free to copy the style from this page if you like it; formatted CSS is <a href="/style_full.css">here</a>).<br />
-		Note the <code>.error</code> class: in case the browser does not support websockets, a <code>&lt;div&gt;</code> containing more information is shown instead of the table.<br />
+		Note the <code>.extinfo-error</code> class: in case the browser does not support websockets, a <code>&lt;div&gt;</code> containing more information is shown instead of the table.<br />
 		To target only elements injected into the DOM tree by the embed script, use something like this:
 		<pre>
 #extinfo-demo {
@@ -58,9 +58,10 @@
 
 	...
 }</pre>
+		where <code>demo</code> is the ID you chose.
 	</p>
 
-	<script src="//{{.}}/embed.js?id=demo&amp;addr=sauerleague.org&amp;port=6666">
+	<script src="//{{.}}/embed.js?id=demo&amp;addr=ogros.org&amp;port=20000">
 	</script>
 </body>
 </html>
