some work on the detailed scoreboard view

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body onload="init('{{.}}');" spellcheck="false">
+<body onload="init();" spellcheck="false">
 	<h1 id="heading">
 		... // extinfo-web
 	</h1>
