fixed embedding demo page (wrong web address included when running behind reverse proxy)

--- a/html/embed_demo.html
+++ b/html/embed_demo.html
@@ -31,9 +31,9 @@
 	<p>
 		At the end of your page's <code>&lt;body&gt; ... &lt;/body&gt;</code>, put this snippet:
 		<pre>
-&lt;script src="http://{{.}}/embed.js?id=demo&amp;amp;addr=ogros.org&amp;amp;port=20000"&gt;
+&lt;script src="http://{{.}}/embed.js?id=demo&amp;amp;addr=noviteam.de&amp;amp;port=28785"&gt;
 &lt;/script&gt;</pre>
-		<code>demo</code> is the part of your container's ID you chose yourself (your own identifier), <code>ogros.org</code> is the IP or host name of the server you want to monitor, and <code>20000</code> its port.
+		<code>demo</code> is the part of your container's ID you chose yourself (your own identifier), <code>noviteam.de</code> is the IP or host name of the server you want to monitor, and <code>28785</code> its port.
 	</p>
 
 	<div id="extinfo-demo">
@@ -61,7 +61,7 @@
 		where <code>demo</code> is the ID you chose.
 	</p>
 
-	<script src="//{{.}}/embed.js?id=demo&amp;addr=ogros.org&amp;port=20000">
+	<script src="//{{.}}/embed.js?id=demo&amp;addr=noviteam.de&amp;port=28785">
 	</script>
 </body>
 </html>
