riot.js ain't easy enough, use Vue.js

--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,13 @@
 			<tr>
 				<td>Host</td>
 				<td id="host" contenteditable spellcheck="false" onblur="updatesocket();">
-					sauerleague.org
+					noviteam.de
 				</td>
 			</tr>
 			<tr>
 				<td>Port</td>
 				<td id="port" contenteditable spellcheck="false" onblur="updatesocket();">
-					10000
+					28785
 				</td>
 			</tr>
 		</thead>
