--- a/html/detailed.html
+++ b/html/detailed.html
@@ -3,24 +3,76 @@
 
 <head>
 	<title>monitor // extinfo-web</title>
-	<script src='http://use.edgefonts.net/open-sans.js'></script>
-	<script src='/utils.js'></script>
+	<script src="https://npmcdn.com/vue/dist/vue.js"></script>
 	<script src='/extinfo_detailed.js'></script>
 	<link rel='stylesheet' href='/style_full.css'>
 	<meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
 <body onload='init();' spellcheck='false'>
-	<scoreboard></scoreboard>
 
-	<script src="/scoreboard.tag.html" type="riot/tag"></script>
-	<script src="/serverinfo.tag.html" type="riot/tag"></script>
-	<script src="/team.tag.html" type="riot/tag"></script>
+	<div id='scoreboard'>
+		<table id="serverinfo">
+			<tr>
+				<td colspan='4'>
+					<h1>{{info.description}}</h1>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<span class='bold'>{{info.gameMode}}</span> on <span class='bold'>{{info.map}}</span>
+				</td>
+				<td>{{int2string(info.secsLeft)}}</td>
+				<td>{{info.masterMode}}</td>
+				<td>
+					<span>{{info.numberOfClients}}</span>/<span>{{info.maxNumberOfClients}}</span>
+				</td>
+			</tr>
+		</table>
 
-	<script src="https://cdn.jsdelivr.net/riot/2.6/riot+compiler.min.js"></script>
+		<div v-for='team in teams'>
+			<h2>{{team.name}}: {{team.score}}</h2>
+
+			<table>
+				<thead>
+					<tr>
+						<td>Frags</td>
+						<td>Deaths</td>
+						<td>Accuracy</td>
+						<td>Name</td>
+						<td>CN</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for='player in team.players'>
+						<td>{{player.frags}}</td>
+						<td>{{player.deaths}}</td>
+						<td>{{player.accuracy}}</td>
+						<td>{{player.name}}</td>
+						<td>{{player.clientNum}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 
 	<script>
-		riot.mount('scoreboard', {serverinfo: serverinfo, teams: teams})
+		window.data = {
+			info: {},
+			teams: {}
+		}
+
+		new Vue({
+			el: '#scoreboard',
+			data: data,
+			methods: {
+				int2string: function(secondsLeft) {
+					var minutes = Math.floor(secondsLeft/60)
+					var seconds = secondsLeft % 60
+					return (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds
+				}
+			}
+		})
 	</script>
 </body>
 
