use Source Code Pro font

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>live monitor – extinfo</title>
+	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&subset=latin-ext" rel="stylesheet">
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js'></script>
 	<script src='/extinfo.js'></script>
 	<link rel='stylesheet' href='/style.css'>
