--- a/html/index.html
+++ b/html/index.html
@@ -2,12 +2,17 @@
 <html>
 
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta charset="utf-8">
+
 	<title>live monitor – extinfo</title>
-	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&subset=latin-ext" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=cyrillic,greek" rel="stylesheet">
+	<link rel='stylesheet' href='/style.css'>
+
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js'></script>
 	<script src='/extinfo.js'></script>
-	<link rel='stylesheet' href='/style.css'>
-	<meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
 <body onload='init();' spellcheck='false'>
