--- a/html/index.html
+++ b/html/index.html
@@ -9,10 +9,10 @@
 	<title>live monitor – extinfo</title>
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=cyrillic,greek' rel='stylesheet'>
-	<link rel='stylesheet' href='/style.css'>
+	<link rel='stylesheet' href='/css/style.css'>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.min.js'></script>
-	<script src='/extinfo.js'></script>
+	<script src='/js/extinfo.js'></script>
 </head>
 
 <body onload='init();' spellcheck='false'>
