--- a/html/index.html
+++ b/html/index.html
@@ -70,12 +70,12 @@
 				</thead>
 				<tbody>
 					<tr v-if='!servers.length'>
-						<td colspan=6 class="centered">loading…</td>
+						<td colspan=6 class='centered'>loading…</td>
 					</tr>
 					<tr v-for='server in servers'>
 						<td class='count'>{{server.numberOfClients}}</td>
 						<td v-if='isTeamMode(server.gameMode)'>
-							<a v-bind:href='"#"+server.address'>{{server.description}}</a>
+							<a v-bind:href='"#"+server.address' class='subtle'>{{server.description}}</a>
 						</td>
 						<td v-else>{{server.description}}</td>
 						<td>{{server.gameMode}}</td>
