--- a/html/index.html
+++ b/html/index.html
@@ -66,21 +66,21 @@
 					<tr>
 						<td>Players</td>
 						<td>Description</td>
-						<td>Mode</td>
 						<td>Map</td>
+						<td>Game Mode</td>
 						<td>Time Left</td>
 						<td>Master Mode</td>
 					</tr>
 				</thead>
 				<tbody>
 					<tr v-for='server in servers'>
-						<td class='count'>{{server.numberOfClients}}</td>
+						<td class='count'>{{server.numberOfClients}}/{{server.maxNumberOfClients}}</td>
 						<td v-if='isTeamMode(server.gameMode)'>
 							<a v-bind:href='"#"+server.address' class='subtle'>{{server.description}}</a>
 						</td>
 						<td v-else>{{server.description}}</td>
-						<td>{{server.gameMode}}</td>
 						<td>{{server.map}}</td>
+						<td>{{server.gameMode}}</td>
 						<td class='centered'>{{formatTimeLeft(server.secsLeft)}}</td>
 						<td>{{server.masterMode}}</td>
 					</tr>
